DIAC-2401 springboot 3 and java 21 (#467)
* springboot 2.x -> 3.0

* pact fixes

* springboot 3.0 -> 3.1

* springboot 3.1 -> 3.2

* checkstyle fix

* springboot 3.2 -> 3.3

* springboot 3.3 -> 3.4

* springboot 3.4 -> 3.5

* checkstyle fix

* ccd scenario runner fix

* java 17 -> 21

* java 17 -> 21 and LD bump and gradle minor bump

* gradle clean up and bumps

* pact run fix

* bumping serenity

* swapping junit impl

* minor improvement

* minor improvement

* minor improvement to lombok build

* bumping java-logging attempt

* improving CcdScenarioRunnerTest

* further improvement

* further improvement

* test fix

* adding field

* adding field

* report

* event test improvement

* fix

* version bumps

* version bumps and fix

* cve fix

* cve fix

* improving CcdScenarioRunnerTest

* improving CcdScenarioRunnerTest

* improving CcdScenarioRunnerTest

* better jackson management

* better serenity management

* better serenity management

* fix

* fix

* adding local suppression file back

* adding local suppression file back

* adding local suppression file back

* fixing dependency check and CVEs

* removing unneeded suppression

* fix to scenario runner

* fix to scenario runner

* fix to scenario runner

* uk.gov.hmcts.java bump

* removing false positive suppression

* owasp

* tomcat global bunp

* running CcdScenarioRunnerTest concurrently

* netty bump

* adding test retry

* removing retry loop

* improving ccd runner

* fix post merge

* fix post merge

* postgres driver

* adding jackson databind

* Revert "removing retry loop"

This reverts commit dca189e6

* Revert "adding test retry"

This reverts commit bb80c9968ea75b24f4d2afd1d95a0899b294bf6b.

* adding jackson databind

---------

Co-authored-by: K Georgiou <KleoG@users.noreply.github.com>